--- a/resume.tex
+++ b/resume.tex
@@ -1,10 +1,10 @@
-%!TEX TS-program = xelatex
+%!TEX TS-program = luatex
 %!TEX encoding = UTF-8 Unicode
 %-------------------------------------------------------------------------------
 % CONFIGURATIONS
 %-------------------------------------------------------------------------------
 % A4 paper size by default, use 'letterpaper' for US letter
-\documentclass[12pt, a4paper]{awesome-cv}
+\documentclass[12pt, a4paper]{styles/awesome-cv}
 
 \geometry{left=1cm, top=1cm, right=1cm, bottom=1cm, footskip=.5cm}
 \fontdir[fonts/]
@@ -15,27 +15,26 @@
 \setbool{acvSectionColorHighlight}{true}
 
 
-% Available options: circle|rectangle,edge/noedge,left/right
-% \photo[rectangle,edge,right]{./examples/profile}
+% Available options:
 \name{Madhu}{Krishnan}
 \position{{\enskip\cdotp\enskip}Software Engineer{\enskip\cdotp\enskip}Backend \& Distributed Systems{\enskip\cdotp\enskip}}
 %\address{Los Angeles, CA}
 
 \homepage{www.madhuvk.com}
-\email{ping@madhuvk.com}
+\email{madhuv.krishnan@gmail.com}
 \linkedin{madhuvk}
 \github{madhuvk}
 
 %-------------------------------------------------------------------------------
 \begin{document}
 
-\makecvheader[C] %(C: center, L: left, R: right)
+\makecvheader[C]
 
-%\input{resume/summary}
-\input{resume/education}
-\input{resume/skills}
-\input{resume/experience}
-\input{resume/research}
-\input{resume/projects}
+%\input{sections/summary}
+\input{sections/education}
+\input{sections/skills}
+\input{sections/experience}
+\input{sections/research}
+\input{sections/projects}
 
 \end{document}
