--- a/sections/education.tex
+++ b/sections/education.tex
@@ -9,7 +9,7 @@
     {
       \vspace{-5mm}
       \begin{description}
-        \item \hspace{-2mm}{Double Major}
+        \item \hspace{-2mm}{Double Degree (Summa Cum Laude)}
         \begin{description}
           \item \hspace{-6mm}{B.S. Computer Science}
           \item \hspace{-6mm}{B.S. Applied Mathematics}
@@ -19,9 +19,8 @@
     }
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Summa Cum Laude}
-        \item {Undergradute tutor}
-        \item {Tau Beta Pi Engineering Honor Society (Vice-President)}
+        \item {Undergraduate Tutor}
+        \item {Tau Beta Pi Honor Society (Vice-President)}
       \end{cvitems}
     }
     
