--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -6,55 +6,40 @@
   \cventry
     {Software Engineer} % Job title
     {Uptrust} % Organization
-    {Remote, CA} % Location
+    {} % Location
     {Apr. 2021 - Jun. 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {TODO}
+        \item {Designed and implemented new \textbf{queuing system with pg-boss} to improve reliability and fault-tolerance of the messaging system, including resilience to dropped messages, automatic retries, and service monitors per queue.}
+        \item {Rewrote the messaging system with \textbf{GraphQL} APIs with backing \textbf{Typescript + Postgres} implementations as part of a datastore migration from Firebase.}
+        \item {Designed additional features, including recurring court date events and many staff-to-client associations, and Coffeescript-to-Typescript migration.}
       \end{cvitems}
     }
     
 %---------------------------------------------------------
-  \cventry
-    {Senior Software Engineer} % Job title
+  \cvthreeentry
     {Salesforce} % Organization
-    {San Francisco, CA} % Location
-    {Mar. 2017 - Apr. 2021} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developing and augmenting gRPC microservices to provide an enterprise-scale platform for the search query execution.}
-      \end{cvitems}
-    }
-    
-%---------------------------------------------------------
-  \cventry
-    {SWE Intern (Search Cloud)} % Job title
-    {} % Organization
     {} % Location
-    {Jun. 2016 - Sep. 2016} % Date(s)
+    {Senior Software Engineer}
+    {Mar. 2017 - Apr. 2021}
+    {Intern (Core Search)}
+    {Jun. 2016 - Sep. 2016}
+    {Intern (Service Cloud)}
+    {Jun. 2015 - Sep. 2015}
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Improved production monitoring for home-grown A/B testing and experimentation infrastructure.}
+        \item {Designed and implemented performance improvements in the legacy search query execution, leading to \textbf{500ms+ improvement} for some customers.}
+        \item {Led implementation for "many \textbf{Kubernetes} namespaces" interim solution for developer productivity in the early days of an AWS public cloud migration. Presented to architects and the CTO to help prioritize an improved development experience.}
+        \item {Shipped critical MVP features for SQEP, one of the first \textbf{gRPC microservices} at Salesforce, used to provide real-time execution of maching learning models.}
+        \item {Implemented key features to the internal \textbf{feature toggling} infrastructure, including database migrations and adding service alerts.}
       \end{cvitems}
     }
     
 %---------------------------------------------------------
   \cventry
-    {SWE Intern (Service Cloud)} % Job title
-    {} % Organization
-    {} % Location
-    {Jun. 2015 - Sep. 2015} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented and tested a \textbf{reCAPTCHA} filtering service for Service Cloud’s case web-forms.}
-      \end{cvitems}
-    }
-    
-%---------------------------------------------------------
-  \cventry
-    {SWE Intern} % Job title
+    {Software Engineering Intern} % Job title
     {Annai Systems} % Organization
-    {Carlsbad, CA} % Location
+    {} % Location
     {June. 2014 - Sep. 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
