--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -12,12 +12,12 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Java, Typescript, Python, Haskell, C/C++, Matlab, LaTeX} % Skills
+    {Java, Typescript/Javascript, Python, C/C++, MATLAB, Haskell, LaTeX} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Technologies} % Category
-    {Docker/Podman, Kubernetes/Helm, Istio, PostgreSQL, gRPC, GraphQL, REST, Solr, Datadog, Prometheus} % Skills
+    {Docker, Kubernetes/Helm, Istio, Postgres, gRPC, GraphQL, REST, Message Queues, Solr, Git, GNU/Linux} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
