--- a/resume.tex
+++ b/resume.tex
@@ -1,27 +1,24 @@
-%!TEX TS-program = luatex
+%!TEX TS-program = lualatex
 %!TEX encoding = UTF-8 Unicode
 %-------------------------------------------------------------------------------
 % CONFIGURATIONS
 %-------------------------------------------------------------------------------
 % A4 paper size by default, use 'letterpaper' for US letter
-\documentclass[12pt, a4paper]{styles/awesome-cv}
+\documentclass[12pt, a4paper]{styles/awesome-cv-mvk}
 
 \geometry{left=1cm, top=1cm, right=1cm, bottom=1cm, footskip=.5cm}
 \fontdir[fonts/]
 
 % Awesome Colors: emerald, skyblue, red, pink, orange, nephritis, concrete, darknight
 \colorlet{awesome}{awesome-emerald}
-
 \setbool{acvSectionColorHighlight}{true}
 
 
-% Available options:
 \name{Madhu}{Krishnan}
 \position{{\enskip\cdotp\enskip}Software Engineer{\enskip\cdotp\enskip}Backend \& Distributed Systems{\enskip\cdotp\enskip}}
-%\address{Los Angeles, CA}
 
 \homepage{www.madhuvk.com}
-\email{madhuv.krishnan@gmail.com}
+\email{ping@madhuvk.com}
 \linkedin{madhuvk}
 \github{madhuvk}
 
@@ -30,7 +27,6 @@
 
 \makecvheader[C]
 
-%\input{sections/summary}
 \input{sections/education}
 \input{sections/skills}
 \input{sections/experience}
