--- a/resume.tex
+++ b/resume.tex
@@ -3,19 +3,20 @@
 %-------------------------------------------------------------------------------
 % CONFIGURATIONS
 %-------------------------------------------------------------------------------
-% A4 paper size by default, use 'letterpaper' for US letter
 \documentclass[12pt, a4paper]{styles/awesome-cv-mvk}
 
 \geometry{left=1cm, top=1cm, right=1cm, bottom=1cm, footskip=.5cm}
-\fontdir[fonts/]
 
-% Awesome Colors: emerald, skyblue, red, pink, orange, nephritis, concrete, darknight
 \colorlet{awesome}{awesome-emerald}
 \setbool{acvSectionColorHighlight}{true}
 
 
 \name{Madhu}{Krishnan}
-\position{{\enskip\cdotp\enskip}Software Engineer{\enskip\cdotp\enskip}Backend \& Distributed Systems{\enskip\cdotp\enskip}}
+\position{
+  {\enskip\cdotp\enskip}Software Engineer
+  {\enskip\cdotp\enskip}Backend \& Distributed Systems
+  {\enskip\cdotp\enskip}
+}
 
 \homepage{www.madhuvk.com}
 \email{ping@madhuvk.com}
