Typo fixes + default docker target

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -10,9 +10,9 @@
     {Apr. 2021 - Jun. 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Designed and implemented new \textbf{queuing system with pg-boss} to improve reliability and fault-tolerance of the messaging system, including resilience to dropped messages, automatic retries, and service monitors per queue.}
+        \item {Designed and implemented a new \textbf{queuing system with pg-boss} to improve reliability and fault-tolerance of the messaging system; new features included resilience to dropped messages, automatic retries, and service monitors per queue.}
         \item {Rewrote the messaging system with \textbf{GraphQL} APIs with backing \textbf{Typescript + Postgres} implementations as part of a datastore migration from Firebase.}
-        \item {Designed additional features, including recurring court date events and many staff-to-client associations, and Coffeescript-to-Typescript migration.}
+        \item {Designed improvements including recurring court date events and many staff-to-client associations, and Coffeescript-to-Typescript migration.}
       \end{cvitems}
     }
     
@@ -28,10 +28,10 @@
     {Jun. 2015 - Sep. 2015}
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Designed and implemented performance improvements in the legacy search query execution, leading to \textbf{500ms+ improvement} for some customers.}
+        \item {Designed and implemented performance improvements in legacy search query execution, leading to \textbf{500ms+ improvement} for some customers.}
         \item {Led implementation for "many \textbf{Kubernetes} namespaces" interim solution for developer productivity in the early days of an AWS public cloud migration. Presented to architects and the CTO to help prioritize an improved development experience.}
-        \item {Shipped critical MVP features for SQEP, one of the first \textbf{gRPC microservices} at Salesforce, used to provide real-time execution of maching learning models.}
-        \item {Implemented key features to the internal \textbf{feature toggling} infrastructure, including database migrations and adding service alerts.}
+        \item {Shipped critical MVP features for SQEP, one of the first \textbf{gRPC microservices} at Salesforce, used to provide real-time execution of machine learning models.}
+        \item {Implemented key features to the internal \textbf{feature toggling} infrastructure, including database migrations and service alerts.}
       \end{cvitems}
     }
     
