--- a/resume.tex
+++ b/resume.tex
@@ -5,7 +5,7 @@
 %-------------------------------------------------------------------------------
 \documentclass[12pt, a4paper]{styles/awesome-cv-mvk}
 
-\geometry{left=1cm, top=1cm, right=1cm, bottom=1cm, footskip=.5cm}
+\geometry{left=1cm, top=1cm, right=1cm, bottom=.3cm, footskip=.1cm}
 
 \colorlet{awesome}{awesome-emerald}
 \setbool{acvSectionColorHighlight}{true}
