--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -5,31 +5,38 @@
 \begin{cvhonors}
 %---------------------------------------------------------
   \cvhonor
+    {Winner of `Coolest Hack`} % Award
+    {Einstin Cloud Hackathon (Multi-Armed Bandit Experimentation)} % Event
+    {} % Location
+    {2020} % Date(s)
+
+%---------------------------------------------------------
+  \cvhonor
     {3rd Place} % Award
     {Facebook Hackathon (Facebook Reconnect)} % Event
     {} % Location
     {2014} % Date(s)
-    
+
 %---------------------------------------------------------
   \cvhonor
     {2nd Place} % Award
     {Intuit Hackathon (Triton Exchange)} % Event
     {} % Location
     {2013} % Date(s)
-    
+
 %---------------------------------------------------------
   \cvhonor
     {2nd Place} % Award
     {Intel ISEF Sweepstakes} % Event
     {} % Location
     {2012} % Date(s)
-    
+
 %---------------------------------------------------------
   \cvhonor
     {1st Place} % Award
     {Greater San Diego Science and Engineering Fair} % Event
     {} % Location
     {2012} % Date(s)
-    
+
 %---------------------------------------------------------
 \end{cvhonors}
