--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -5,7 +5,7 @@
 \begin{cvhonors}
 %---------------------------------------------------------
   \cvhonor
-    {Winner of `Coolest Hack`} % Award
+    {Winner of `Coolest Hack'} % Award
     {Einstin Cloud Hackathon (Multi-Armed Bandit Experimentation)} % Event
     {} % Location
     {2020} % Date(s)
