--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -17,7 +17,7 @@
 %---------------------------------------------------------
   \cvskill
     {Technologies} % Category
-    {Docker, Kubernetes, Terraform, Istio, Postgres, Node.js, gRPC, GraphQL, REST, Message Queues, Solr, Git, GNU/Linux} % Skills
+    {Docker, Kubernetes, Terraform, Istio, Postgres, Node.js, gRPC, GraphQL, Message Queues, Solr, Datadog, AWS, Git, GNU/Linux} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
