--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -11,13 +11,13 @@
 
 %---------------------------------------------------------
   \cvskill
-    {Programming} % Category
+    {Languages} % Category
     {Java, Typescript/Javascript, Python, C/C++, MATLAB, Haskell, LaTeX} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Technologies} % Category
-    {Docker, Kubernetes, Terraform, Istio, Postgres, Node.js, gRPC, GraphQL, Message Queues, Solr, Datadog, AWS, Git, GNU/Linux} % Skills
+    {Postgres, Node.js, gRPC, GraphQL, Kafka, Message Queues, Solr, Datadog, Kubernetes, Terraform, AWS, Git, GNU/Linux} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
