--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -35,7 +35,7 @@
         \begin{itemize}
           \item {Lead the implementation for novel "many \textbf{Kubernetes} namespaces" solution for search team's developer productivity in order to meet strict company timelines - presented this solution to the CTO and principal architects.}
           \item {Deployed critical \textbf{microservices} for search relevancy in the first AWS Hyperforce regions.}
-          \item {Designed and implemented critical performance improvements critical for the stricter public cloud requirements.}
+          \item {Designed and implemented performance improvements necessary for the stricter public cloud latency requirements.}
         \end{itemize}
         \item {Designed and implemented p50 and p99 latency improvements in legacy services, necessary for the Instant Results product feature.}
         \item {Implemented key features for \textbf{feature toggling, A/B experimentation}, and the \textbf{gRPC execution engine}.}
