--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -11,7 +11,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Designed and implemented backend requirements for product features necessary for new and expiring contracts - video chat, announcements, recurring events, and multiple-staff associations.}
-        \item {Took ownership of the the messaging system services and contributed major enhancements for system reliability and 10x scale.}
+        \item {Took ownership of the messaging system service and contributed major enhancements for system reliability and 10x scale.}
         \begin{itemize}
           \item {Introduced queue alerts, retries, backpressure, and rate-limiting for improved observability and resiliency.}
           \item {Migrated queues away from \textbf{Firebase}, and re-wrote data access to use \textbf{GraphQL} and \textbf{Postgres} for improved tail latencies and throughput.}
