Business-focus + experience-level skills (TODO: check typos/footskip)

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -6,23 +6,21 @@
   \cventry
     {Software Engineer} % Job title
     {Uptrust} % Organization
-    {} % Location
+    {Type/Coffee/Javascript, GraphQL, Firebase, Datadog, Aurora (Postgres), CircleCI} % Skills
     {Apr. 2021 - Jun. 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Designed and implemented backend requirements for product features necessary for new and expiring contracts - video chat, announcements, recurring events, and multiple-staff associations.}
-        \item {Took ownership of the messaging system service and contributed major enhancements for system reliability and 10x scale.}
-        \begin{itemize}
-          \item {Introduced queue alerts, retries, backpressure, and rate-limiting for improved observability and resiliency.}
-          \item {Migrated queues away from \textbf{Firebase}, and re-wrote data access to use \textbf{GraphQL} and \textbf{Postgres} for improved tail latencies and throughput.}
-        \end{itemize}
+        \item {Reduced customer attrition by contributing to key product features - video chat, announcements, recurring events, and multiple staff members.}
+        \item {Unlocked more customers by increasing messaging throughput using a new data access layer and optimized cross-service network requests.}
+        \item {Improved the service quality of messaging by introducing rate-limiting, at-least-once queue delivery, and backpressure.}
+        \item {Modernized system observability and reduced the failure-rate by introducing queue metrics/alerts, retries, and rate-limiting.}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cvthreeentry
     {Salesforce} % Organization
-    {} % Location
+    {Java, Python, gRPC, Solr, AWS EKS, Terraform, Oracle PL/SQL, Spinnaker, Jenkins} % Skills
     {Senior Software Engineer}
     {Mar. 2017 - Apr. 2021}
     {Intern (Core Search)}
@@ -31,14 +29,10 @@
     {Jun. 2015 - Sep. 2015}
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Worked cross-team to prioritize and perform work necessary to migrate search services to the public cloud architecture, Hyperforce.}
-        \begin{itemize}
-          \item {Lead the implementation for novel "many \textbf{Kubernetes} namespaces" solution for search team's developer productivity in order to meet strict company timelines - presented this solution to the CTO and principal architects.}
-          \item {Deployed critical \textbf{microservices} for search relevancy in the first AWS Hyperforce regions.}
-          \item {Designed and implemented performance improvements necessary for the stricter public cloud latency requirements.}
-        \end{itemize}
-        \item {Designed and implemented p50 and p99 latency improvements in legacy services, necessary for the Instant Results product feature.}
-        \item {Implemented key features for \textbf{feature toggling, A/B experimentation}, and the \textbf{gRPC execution engine}.}
+        \item {Attained optimistic search business timelines for the new public cloud architecture, Hyperforce, by leading the implementation of a novel "many Kubernetes namespace" solution for developer productivity - presented this solution to the CTO and principal architects.}
+        \item {Achieved performance targets for Hyperforce and real-time search suggestions by optimizing backend fan-out/fan-in with reduced tail-latencies.}
+        \item {Improved CTR and Precision@K search relevancy in Hyperforce by owning and deploying the machine-learning model execution engine.}
+        \item {Shortened development lifecycle by implementing key features for feature-toggling, A/B experimentation, and ML model deployments.}
       \end{cvitems}
     }
 
@@ -46,11 +40,11 @@
   \cventry
     {Software Engineering Intern} % Job title
     {Annai Systems} % Organization
-    {} % Location
+    {C/C++, Bash, Make, UDP, UDT, NAT Traversal} % Skills
     {June. 2014 - Sep. 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Built and tested an encrypted high-speed transport service for genome sequencing with \textbf{OpenSSL} and \textbf{C/C++}.}
+        \item {Unlocked encrypted transport of genome sequences by modifying UDT, a WAN-optimized application-layer protocol.}
       \end{cvitems}
     }
 
