Typo fixes / rewording

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -4,23 +4,23 @@
 
 %---------------------------------------------------------
   \cventry
-    {Software Engineer} % Job title
-    {Uptrust} % Organization
-    {Type/Coffee/Javascript, GraphQL, Firebase, Datadog, Aurora (Postgres), CircleCI} % Skills
-    {Apr. 2021 - Jun. 2022} % Date(s)
+    {Software Engineer}
+    {Uptrust}
+    {Typescript, Coffeescript, GraphQL, Firebase, Twilio, AWS Postgres, CircleCI}
+    {Apr. 2021 - Jun. 2022}
     {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
+      \begin{cvitems}
         \item {Reduced customer attrition by contributing to key product features - video chat, announcements, recurring events, and multiple staff members.}
         \item {Unlocked more customers by increasing messaging throughput using a new data access layer and optimized cross-service network requests.}
-        \item {Improved the service quality of messaging by introducing rate-limiting, at-least-once queue delivery, and backpressure.}
-        \item {Modernized system observability and reduced the failure-rate by introducing queue metrics/alerts, retries, and rate-limiting.}
+        \item {Enhanced messaging service quality by introducing rate-limiting, at-least-once queue delivery, and backpressure.}
+        \item {Improved failure incidence and detection by implementing automatic consumer retries, queue alerts, and structured logging.}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cvthreeentry
-    {Salesforce} % Organization
-    {Java, Python, gRPC, Solr, AWS EKS, Terraform, Oracle PL/SQL, Spinnaker, Jenkins} % Skills
+    {Salesforce}
+    {Java, Python, gRPC, Solr, AWS EKS, Terraform, Oracle PL/SQL, Spinnaker, Jenkins}
     {Senior Software Engineer}
     {Mar. 2017 - Apr. 2021}
     {Intern (Core Search)}
@@ -28,23 +28,23 @@
     {Intern (Service Cloud)}
     {Jun. 2015 - Sep. 2015}
     {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Attained optimistic search business timelines for the new public cloud architecture, Hyperforce, by leading the implementation of a novel "many Kubernetes namespace" solution for developer productivity - presented this solution to the CTO and principal architects.}
-        \item {Achieved performance targets for Hyperforce and real-time search suggestions by optimizing backend fan-out/fan-in with reduced tail-latencies.}
-        \item {Improved CTR and Precision@K search relevancy in Hyperforce by owning and deploying the machine-learning model execution engine.}
-        \item {Shortened development lifecycle by implementing key features for feature-toggling, A/B experimentation, and ML model deployments.}
+      \begin{cvitems}
+        \item {Attained optimistic search business timelines for the new public cloud architecture, Hyperforce, by leading the implementation of a "many-namespace" solution for developer productivity - presented the design and results to the CTO and principal architects.}
+        \item {Reached performance targets for Hyperforce and real-time search suggestions by reducing tail latencies with optimized backend fan-out.}
+        \item {Improved CTR and Precision@K search metrics in Hyperforce by owning and deploying the ML model execution engine.}
+        \item {Shortened the development lifecycle by implementing key features for feature-toggling, A/B experimentation, and ML model deployments.}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Software Engineering Intern} % Job title
-    {Annai Systems} % Organization
-    {C/C++, Bash, Make, UDP, UDT, NAT Traversal} % Skills
-    {June. 2014 - Sep. 2014} % Date(s)
+    {Software Engineering Intern}
+    {Annai Systems}
+    {C/C++, Bash, Make/CMake, OpenSSL EVP, UDP, UDT, NAT Traversal}
+    {June. 2014 - Sep. 2014}
     {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Unlocked encrypted transport of genome sequences by modifying UDT, a WAN-optimized application-layer protocol.}
+      \begin{cvitems}
+        \item {Enabled encrypted transport of genome sequences by extending UDT, a WAN-optimized application-layer protocol.}
       \end{cvitems}
     }
 
